--- a/经验之谈.md
+++ b/经验之谈.md
@@ -4,5 +4,5 @@
 GitHub私人仓库可以不要收费，但前提是你必须是学生，哈哈，这也许就是学生时代才能享受的特权吧，所以一定要好好珍惜和利用，当然，一些教育人士也是可以免费申请
 的。如果你是学生，并且已有 Github 账号，那都可以去申请微型方案（Micro Plan）。私有仓库可用来托管你个人的课程项目、论文或和学位相关的研究。当然了，如果
 学生需要用于团队的私有仓库，同样可以申请。如果你是教师，或者是学生组织（诸如校园报社和机器人俱乐部）的赞助商，可以申请组织账号（Organization  account
-）。所以还是有很多空子可以钻的，钻空子倒也不是，反正的看自己怎么用了，GitHub 上的学术优惠和 GitHub Enterprise ，可用于很多学术地方，包括：学校管理、
+）。所以还是有很多空子可以钻的，其实钻空子倒也不是，反正看自己怎么用了，GitHub 上的学术优惠和 GitHub Enterprise ，可用于很多学术地方，包括：学校管理、
 IT 团体和研究团体。可以在GitHub官网下申请URL:https://github.com/edu
