--- a/经验之谈.md
+++ b/经验之谈.md
@@ -1,6 +1,6 @@
-# GitHub坑
-# Summary
-# 介绍一些新手不为所知的tips
+## 我在GitHub上遇到的坑儿
+### Summary
+### 介绍一些新手不为所知的tips
 
 GitHub私人仓库可以不要收费，但前提是你必须是学生，哈哈，这也许就是学生时代才能享受的特权吧，所以一定要好好珍惜和利用，当然，一些教育人士也是可以免费申请
 的。如果你是学生，并且已有 Github 账号，那都可以去申请微型方案（Micro Plan）。私有仓库可用来托管你个人的课程项目、论文或和学位相关的研究。当然了，如果
