update the doc of readme.md

--- a/开源生态.md
+++ b/开源生态.md
@@ -10,7 +10,7 @@
 
 [Open source releases from Microsoft](https://opensource.microsoft.com/)
 
-[Google Open Source](https://opensource.google.com/)
+[Google Open Source](https://opensource.google.com/)[科学上网才能访问]
 
 
 
