--- a/Record-mood/学习.md
+++ b/Record-mood/学习.md
@@ -1,11 +1,67 @@
 
-$$
-Coding + Creating => Contribute
-$$
+> Coding + Creating => Contribute
 
+
+了解→理解→掌握→精通
+
+-----------
+
+大学课程总结
+
+| Time             | Content                                                      |
+| ---------------- | ------------------------------------------------------------ |
+| 大一、大二上学期 | 1 C/C++、Java基础语法                                        |
+|                  | 2 算法与数据结构（排序算法及优化算法）                       |
+|                  | 3 计算机组成原理（软件及硬件系统）(大二上学期)               |
+|                  | 4 前端基础及网站基本搭建（Html、CSS、javascript、博客搭建，域名解析...） |
+|                  |                                                              |
+| 大二下学期       | 1 数据库原理（ql语法及DBMS的操作）                           |
+|                  | 2 UML建模（EA及Axure原型工具的使用）                         |
+|                  | 3 软件测试（黑盒、白盒测试）                                 |
+|                  | 4 操作系统（OS学习及自制）                                   |
+|                  | 5 C#高级程序（C#和.NET的语法及Visual studio的使用WinFrom）   |
+|                  | 6 网络原理（网络结构及编程）                                 |
+|                  | 7 软件设计模式及规范                                         |
+|                  |                                                              |
+| 大三上学期       | 1 Asp.Net第一阶段全（MVC、Web开发）                          |
+|                  | 2 Web前端（javascript、Bootstrop、Jquery、Ajax等框架）       |
+|                  | 3 服务器搭建（VPS搭建VPN...）                                |
+|                  | 4 软件项目管理（面向对象企业级软件设计）                     |
+|                  | 5 软件部署与维护                                             |
+|                  |                                                              |
+| 大三下学期       | 1 中核建实习项目（Delmia二次开发——VBA）                      |
+|                  | 2 汇编语言（自学）                                           |
+|                  | 3 微机原理与接口技术（自学）                                 |
+|                  | 4 操作系统深入（自学）                                       |
+|                  | 5 Python（爬虫）                                             |
+|                  | 6 吾爱破解（逆向工程）                                       |
+|                  | 7 WinForm（格式转换 NPOI）                                   |
+|                  | 8 航天二院实习项目（分布式用例测试工具OnRecord）             |
+|                  | 9 持续集成（Jenkins）                                        |
+|                  |                                                              |
+| 大四上学期       | 1 .Net Core系列学习                                          |
+|                  | 2 数据结构与算法巩固（LeetCode）                             |
+|                  | 3 Devops（Scrum模型）                                        |
+|                  | 4 微服务（Docker容器、容器编排K8S）                          |
+|                  | 5 Linux、Mac系统（Fedora Linux）                             |
+|                  | 6 WPF学习（数据可视化、.Net Core3.0）                        |
+|                  | 7 前端框架入门（Angular、Vue、React）                        |
+|                  | 8 机器学习、深度学习（AI、NLP、ML.NET、Infer.NET）           |
+|                  | 9 Flutter移动开发                                            |
+|                  |                                                              |
+| 大四下学期       | 1 巩固计算机基础知识（Find Job...）                          |
+|                  | 2 GitHub Organization项目开发                                |
+|                  | 3 ......                                                     |
+
+
+-----------------------
+
+
+
+Evernote笔记目录
 | ![](https://camo.githubusercontent.com/13c4e50d88df7178ae1882a203ed57b641674f94/68747470733a2f2f63646e2e7261776769742e636f6d2f73696e647265736f726875732f617765736f6d652f643733303566333864323966656437386661383536353265336136336531353464643865383832392f6d656469612f62616467652e737667) |                                                              |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
-|                                                              | ![](https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/518.jpg) |
+|2019.1.1                                                              | ![](https://raw.githubusercontent.com/ckjbug/xiaokui/master/Evernote/img/Evernote2018.png) |
 |                                                              |                                                              |
 |                                                              |                                                              |
 
