Update 开源生态 .md

--- a/Record-mood/开源生态 .md
+++ b/Record-mood/开源生态 .md
@@ -4,3 +4,13 @@
 
 
 
+**各个大厂的开源社区：**
+
+[Facebook Open Source](https://opensource.fb.com/)
+
+[Open source releases from Microsoft](https://opensource.microsoft.com/)
+
+[Google Open Source](https://opensource.google.com/)[科学上网才能访问]
+
+
+
