--- a/Record-mood/开源生态 .md
+++ b/Record-mood/开源生态 .md
@@ -2,6 +2,9 @@
 
 目前国外谷歌（Google），阿帕奇（Apache），微软（Microsoft），脸书（Fackbook）的开源生态发展地最好，这几年微软的开源之路大家也是有目共睹，[微软2018开源大事记](https://www.oschina.net/news/103045/microsoft-2018-open-source-events-recap)，如果苹果（Apple）公司不紧随开源大潮的话，感觉迟早要被市场淘汰，因为现在很多的开源项目和框架的使用体验越来越好，日新月异。国内阿里，腾讯发展也不错[机智]，还不了解百度的开源路线要怎么走！
 
+<div align="center">
+    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/open%20source%20github.png"> 
+</div>
 
 
 **各个大厂的开源社区：**
