--- a/fengshi/奉时.md
+++ b/fengshi/奉时.md
@@ -1,4 +1,4 @@
 ## 奉时
 <div align="center">
-    <img src=""> 
+    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/shijian.png"> 
 </div>
