--- a/miban/米半.md
+++ b/miban/米半.md
@@ -1,8 +1,8 @@
 ## 米半
 
-我们离灵魂伴侣还差半米，
-但这半米相距的是一辈子。
+> 我们离灵魂伴侣还差半米，      
+> 但这半米相距的是一辈子。
 
 <div align="center">
-    <img src=""> 
+    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/miban.png"> 
 </div>
