--- a/Record-mood/生活.md
+++ b/Record-mood/生活.md
@@ -1,4 +1,4 @@
 
-![](https://cdn.dribbble.com/users/32512/screenshots/5911123/wed_site_illustration_m.gif)
+![pic](https://cdn.dribbble.com/users/32512/screenshots/5911123/wed_site_illustration_m.gif)
 
 #### 灵感源于生活！
