--- a/Record-mood/全栈.md
+++ b/Record-mood/全栈.md
@@ -1,1 +1,64 @@
-## 程序员的最高理想——全栈
+## 我的技术路线——全栈
+
+
+### 编程语言
+
+- C 
+- **C#**
+- Dart
+- Python
+- TypeScript
+- (Visual)Basic
+- HTML/CSS/JaveScript
+
+
+
+### 编程框架
+- ASP.NET Core（MVC/API）
+- Angular(SPA)
+- Flutter
+- WinForm
+- WPF
+- UWP
+
+### 架构模式
+- MVC
+- MVVM 
+- TDD
+- DDD
+- IOC/DI
+
+
+### 数据库/ORM
+- SQL Server
+- MySQL
+- Redis
+- SQLite
+- EF/EF Core
+- Dapper
+
+### DevOps
+- Azure DevOps
+- Jenkins
+- 版本控制
+- 持续集成CI
+- 持续部署CD
+- 敏捷开发Scrum
+
+### 微服务
+- Docker/K8S/APM
+- RabbitMQ
+- CAP定理
+- 负载均衡
+- 反向代理
+- 高性能
+- 高可用
+- 高并发
+
+### Linux
+- Shell
+- Kali Linux
+- Fedora
+- Qt
+- Makefile
+
