--- a/fengshi/奉时.md
+++ b/fengshi/奉时.md
@@ -1,4 +1,49 @@
 ## 奉时
 <div align="center">
-    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/shijian.png"> 
+    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/MM.jpg"> 
 </div>
+
+### 先天而天弗违，后天而奉天时！
+
+> 这里记录了我从2015年上大学起对自己的投资记录，包括买的书籍、电子设备、软件、视频教程等。
+
+
+#### 最好的投资
+
+已购清单-按时间排序
+
+- 领睿笔记本（电子数码Lingrui） —— ￥6900.0 
+- 搬瓦工VPS（搭建SSR） —— ￥124.0
+- ckjbug.com（域名） —— ￥55.0
+- iPhone 7 Plus手机（电子数码） —— ￥2910.0
+- ASP.NET Core2.0 EF Core项目实战入门（视频教程） ——  ￥33.0
+- 吾爱破解会员（软件会员） —— ￥18.0
+- 从零学习架构（极客时间） —— ￥66.0
+- C#入门经典(第7版)C#6.0&Visual Studio 2015（书本） —— ￥100.0
+- .NET框架设计 模式、配置、工具（书本） —— ￥39.0
+- 北盟网校（会员） —— ￥150.0
+- Sony WH-H9000N耳机（电子数码） —— ￥1200.0
+- PPhub（软件GitHub手机客户端） —— ￥12.0
+- ckjbug.site/.work（网站域名） —— ￥180.0
+- Flutter企业级移动电商实战（视频教程） —— ￥99.0
+- IKBC机械键盘+键帽（电子数码） —— ￥290.0
+- 开源时代dotnet开发者的机遇和挑战（网络教程） —— ￥20.0
+- Virmach VPS（搭建SSR） —— ￥9.0~
+
+.....
+
+代购清单
+
+- Books：ASP.NET Core框架揭秘
+- Books：微信开发深度解析：微信公众号、小程序高效开发秘籍
+- Books：大话存储系列书籍
+- Books：小团队构建大网站
+- Books：Web API的设计与开发
+- 电子数码：Surface Studio2
+- 电子数码：HHKB机械键盘（静电容）
+- 电子数码：Surface Headphones耳机
+- 电子数码：Mac Book Pro笔记本电脑
+- 电子数码：HoloLens 3D全息眼镜
+- 电子数码：Surface Hub2大屏电脑
+
+
