--- a/fengshi/奉时.md
+++ b/fengshi/奉时.md
@@ -1,6 +1,6 @@
 ## 奉时
 <div align="center">
-    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/MM.jpg"> 
+    <img src="https://raw.githubusercontent.com/ckjbug/xiaokui/master/image/MM.jpg" height="300" width="300"> 
 </div>
 
 ### 先天而天弗违，后天而奉天时！
