--- a/fengshi/奉时.md
+++ b/fengshi/奉时.md
@@ -29,10 +29,13 @@
 - IKBC机械键盘+键帽（电子数码） —— ￥290.0
 - 开源时代dotnet开发者的机遇和挑战（网络教程） —— ￥20.0
 - Virmach VPS（搭建SSR） —— ￥9.0~
+- Books：小团队构建大网站 —— ￥55.0
+- Books：Web API的设计与开发 —— ￥42.0
+- Books：Visual C＃从入门到精通（第9版） —— ￥107.0
 
 .....
 
-代购清单
+待购清单
 
 - Books：ASP.NET Core框架揭秘
 - Books：微信开发深度解析：微信公众号、小程序高效开发秘籍
