--- a/fengshi/奉时.md
+++ b/fengshi/奉时.md
@@ -28,10 +28,12 @@
 - Flutter企业级移动电商实战（视频教程） —— ￥99.0
 - IKBC机械键盘+键帽（电子数码） —— ￥290.0
 - 开源时代dotnet开发者的机遇和挑战（网络教程） —— ￥20.0
-- Virmach VPS（搭建SSR） —— ￥9.0~
+- Virmach VPS（搭建SSR） —— ￥9.0
 - Books：小团队构建大网站 —— ￥55.0
 - Books：Web API的设计与开发 —— ￥42.0
 - Books：Visual C＃从入门到精通（第9版） —— ￥107.0
+- 从0开始学微服务（极客时间）—— ￥68
+- Books：大话计算机（系列图书） —— ￥450
 
 .....
 
