--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -48,7 +48,13 @@ Edit on 8 Nov 2018 by ckj
 　　未来不可期，当下应努力！
 
 ------
+## 悟
+　　在微软北京实习的第二周，身边的同学该考研的考研，该工作的工作了，而我选择了一条不一样的道路，继续实习学习，放弃了之前在北京和重庆找的工作，看着大学同学（现室友）在北京做前端工资拿到了15k，也挺羡慕的，但我还是的坚守住，沉下心来充实自己，然后才有资本拿更高的薪资。Center One团队的小伙伴们大都是overseas的研究生，有剑桥大学、华盛顿大学的小姐姐，我的学校和学历也是其中最低的，但是通过这一段时间的相处，我发现他们其实并不是我们想象的那样高不可攀，只是他们的起点比我们高，见识比我们多点儿罢了，没有谁比谁聪明和笨的说法，毕竟每个人都有自己的优点和长处。（对面的小哥哥海外留学花了三百万，这尼玛北京土著的优越感就出来了）
 
+　　现在的学习和生活都在渐渐走上正轨，给自己立了个长期的flag（人若在，🚩不倒），花五年时间打造自己，成为微软的技术专家或MVP，向全栈工程师和架构师的终极目标发展。如果说“选择”比“努力”更重要的话，那我还是要一条路走到黑，但我得抓紧启程了。 .NET技术栈也许不是我最后的选择，但一定是在寻找适合自己技术栈途中的的风向标，期间得注重基础知识和底层的技术。
+  
+　　也许未来的可能性有千万种，但我只要能赶上末班车就行，无论是那一路，不然你就得走夜路了。
+Edit on June 2019 by ckj | Microsoft China Center One
 
 
 
