--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -1,10 +1,11 @@
 ## xiaokui 
 天道酬勤
-### 程序员成长之路
+### 心路历程
 <div align="center">
     <img src="https://www.easyicon.net/api/resizeApi.php?id=1125428&size=128" width="72px"> 
 </div>
 
+> Notice：这是一个以作者“心路历程”为主题的Log，我会将自己在每年里遇到的重要事情和感悟记录在这里，等他日功成身退了再拿出来回忆。成长之路，当一步一个脚印。一辈子不断更，共同见证！
 
 ## 悟　　　
 
@@ -49,14 +50,22 @@ Edit on 8 Nov 2018 by ckj
 
 ------
 ## 悟
-　　在微软北京实习的第二周，身边的同学该考研的考研，该工作的工作了，而我选择了一条不一样的道路，继续实习学习，放弃了之前在北京和重庆找的工作，看着大学同学（现室友）在北京做前端工资拿到了15k，也挺羡慕的，但我还是的坚守住，沉下心来充实自己，然后才有资本拿更高的薪资。Center One团队的小伙伴们大都是overseas的研究生，有剑桥大学、华盛顿大学的小姐姐，我的学校和学历也是其中最低的，但是通过这一段时间的相处，我发现他们其实并不是我们想象的那样高不可攀，只是他们的起点比我们高，见识比我们多点儿罢了，没有谁比谁聪明和笨的说法，毕竟每个人都有自己的优点和长处。（对面的小哥哥海外留学花了三百万，这尼玛北京土著的优越感就出来了）
+　　在微软北京实习的第二周，身边的同学该考研的考研，该工作的工作了，而我选择了一条不一样的道路，继续实习学习，放弃了之前在北京和重庆找的工作，看着大学同学（现室友）在北京做前端工资拿到了15k，也挺羡慕的，但我还是的坚守住，沉下心来充实自己，然后才有资本拿更高的薪资。Center One团队的小伙伴们大都是overseas的研究生，有哈佛、华盛顿、清华大学的小哥哥小姐姐，我的学校和学历也是其中最低的，但是通过这一段时间的相处，我发现他们其实并不是我们想象的那样高不可攀，只是他们的起点比我们高，见识比我们多点儿罢了，没有谁比谁聪明和笨的说法，毕竟每个人都有自己的优点和长处。（对面的小哥哥海外留学花了三百万，这尼玛北京土著的优越感就出来了）
 
 　　现在的学习和生活都在渐渐走上正轨，给自己立了个长期的flag（人若在，🚩不倒），花五年时间打造自己，成为微软的技术专家或MVP，向全栈工程师和架构师的终极目标发展。如果说“选择”比“努力”更重要的话，那我还是要一条路走到黑，但我得抓紧启程了。 .NET技术栈也许不是我最后的选择，但一定是在寻找适合自己技术栈途中的的风向标，期间得注重基础知识和底层的技术。
   
-　　也许未来的可能性有千万种，但我只要能赶上末班车就行，无论是那一路，不然你就得走夜路了。
+　　也许未来的可能性有千万种，但只要能赶上末班车就行，无论是哪一路，不然就得走夜路了。
   
 Edit on June 2019 by ckj | Microsoft China Center One
 
-
+-----
+## 悟
+　　最近思考了很久，我还是决定提前从微软Check Out，离开北京，回去考研，早在很久之前我就有考研深造的想法，只是一直因为实习的事情所耽误，以前总是想着读个大学了就出来早点挣钱，经济独立了就能做自己想做的事情，但最近才深刻地意识到高学历的重要性。客观因素还是觉得现在本科学历太低了，对以后的职业发展会有所牵绊，主观因素还是觉得不能一辈子当码农，一是不太喜欢写代码这个工作，二是相对于程序员这个行业来说我还是更喜欢搞做科研、搞教育这块，所以打算后面有机会再读个博出来当大学教师，三是程序员社会地位很底层，不受人尊重。就拿前几天在一家北京不知名创业公司拿了个一万二的offer，工作环境和发展空间暂不讨论，单就老板为人就给我恶心到了，满口跑火车，还喜欢压榨应届生，刚开始答应的一万五，有餐补什么的，最后我去公司考察了解了一下情况，老板出尔反尔，餐补没有，支支吾吾地说介于我这个情况能去申请一下，每天十块钱（我当时忍住了没喷他，太恶心，十块钱在北京能有什么用）。所以劝解大家找工作一定要去找那种人性化，尊重人权的互联网公司（还要有钱），尽量不要去一些小公司，大部分是饼画得很大，但是没有馅儿。
+  
+　　这两天我结合自身情况针对“考研”进行了深入分析和评估，初步确定了目标学校（现在还不能透露，能成功上岸了再谈）和考研计划。家里人也全力支持我考研，所以早考不如晚考。
+  
+Edit on Aug 2019 by ckj | ChongQing
+  
+　　最可怕的事情不是失败，而是后悔当初！
 
 ![[](https://ckjbug.cnblogs.com/)](https://www.easyicon.net/api/resizeApi.php?id=5323&size=72)
