--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -68,4 +68,16 @@ Edit on Aug 2019 by ckj | ChongQing
   
 　　最可怕的事情不是失败，而是后悔当初！
 
+## 悟
+　　时隔一年，终于安稳下来了，心也沉静下来了。
+　　承接上文，考研未果，或者说根本没有去践行（打脸.jpg），从北京离职回重庆后便投了几家互联网，最终选择了去知网，月薪5k，每天工作相当乏味，公司整体的氛围也不是那么理想，最恶心的是一个算得上互联网企业的公司居然会给人一种国企的感觉，第一天报道我就像一个欠了人事几百万一样，啥事都小心翼翼，她态度还相当恶劣，我也不是在这里抹黑，毕竟这是个例，可能会因人而异，但是公司组织的团建（旅游）还是给我留下了很美好的回忆，两个月试用期一过我就主动提离职了，当时爸妈来看我，我也没有隐瞒情况，他们虽然有些不理解，但是当我面还是支持我所有的决定，于是打算在家调整一段时间(美其名是想创业，实则是在逃避)，恰逢今年新冠疫情爆发，所有的安排都被打乱了，我们这一代经历了非典和新冠，还活着，也是不幸中的万幸。之后在全家人的极力劝说下，准备报班考事业单位，三万多学费全是由我二姐出的，也没要我还，这次怎么说也得破釜沉舟、放手一搏了，不但是为了我自己还是家人都得认真一把，结果也没让家人和朋友失望，自己也算比较幸运，第一次公招就考上了，零零碎碎大概花了两个月时间集中学习，加上自己运用了些报考的小策略，由于这次疫情影响，不同往年，今年是统一7.19考试，既是个机遇，也是个挑战，报名报了三十个左右，缴费交了十五个左右，再从十五个选了三个最合适的岗位作为备选，最后选了个几率最大的地方（二十多个人竞争），也就是我现在上班的地方，一个县城的人民医院（数据库管理岗），我现在对待工作和生活的心态是“既来之，则安之”。考试过后我爸妈和两个姐姐都发了一条朋友圈，特别是我爸很少发朋友圈，从小到大这是第一次让我感觉到“我是他的骄傲”，越来越能感觉到父母正在老去，有时候翻一下十几年前父亲的照片能明显看出岁月留下的痕迹，所以也不能再由着自己的性子了，以前总是觉得家里哥哥姐姐多，我又是最小的一个，把责任都推到他们身上，一人吃饱全家不饿，自己还怀揣着一个北京梦、世界梦，这些东西对于我们这个阶层人来说都是可遇而不可求的，还得看机遇和造化，认真做好自己该做的就行了，其他的交给命运。以前总觉得命运多舛，没有贵人相助，做啥子事都不顺利，怪这个怪那个，现在我才明白，人一生中最大的贵人是父母和兄弟姐妹这些亲人，他们也是我的软肋，我可以不要现在拥有的一切，但我一定要我家人平平安安，健健康康。
+
+　　我在知乎上也回答了个相关的问题[作为90后的你现在是什么状态？对自己在职场上的发展还满意吗？](https://www.zhihu.com/question/415581461/answer/1421124274)
+
+Edit on Aug 2019 by ckj | ChongQing
+
+　　有时候，逃避是一个解决问题的最简单的办法，但是逃避解决不了问题的根本，可以允许你在累的时候给自己放个假，但不能就此沉沦下去，凡是心中有个“度”，把握好就行，调整好心态，重新出发，脚下的路都是自己走出来的。
+
 ![[](https://ckjbug.cnblogs.com/)](https://www.easyicon.net/api/resizeApi.php?id=5323&size=72)
+
+
