--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -67,6 +67,8 @@ Edit on June 2019 by ckj | Microsoft China Center One
 Edit on Aug 2019 by ckj | ChongQing
   
 　　最可怕的事情不是失败，而是后悔当初！
+  
+-----
 
 ## 悟
 　　时隔一年，终于安稳下来了，心也沉静下来了。
@@ -78,6 +80,21 @@ Edit on Aug 2019 by ckj | ChongQing
 Edit on Aug 2020 by ckj | ChongQing
 
 　　有时候，逃避是一个解决问题的最简单的办法，但是逃避解决不了问题的根本，可以允许你在累的时候给自己放个假，但不能就此沉沦下去，凡是心中有个“度”，把握好就行，调整好心态，重新出发，脚下的路都是自己走出来的。
+
+-----
+
+## 悟
+　　转眼间，在新单位上了五个多月的班，一切都挺顺利，父母在这边给我全款买了套房，想着尽可能的给我创造一个好的条件，没有买房的压力，能够好好奋斗自己的事业，但是有了房子，却总缺少点儿"家"的感觉，可能是还没有真正成家立业吧，家里人也在催我找对象，终于体会到家里人催婚的那种感受了，虽然同事和朋友给我介绍了几个女性朋友，但我还是挺反感这种形式的恋爱或者婚姻，所有都回绝了。这段时间养成了存钱的习惯，花钱也不像之前那样大手大脚的了，虽然试用期工资很低，但是每个月多少都会存点儿，用来买基金或理财，以防将来不时之需。最近我性格也发生了不少变化，以前从来不会主动给家里人打电话，但现在每周都会定期给父母和爷爷奶奶打个电话，问候一下。今年的新年愿望便是希望家里人“身体健康，平平安安”！
+  
+　　工作上，稳步推进，感觉都还在我的预期之中，科室差不多每周都会聚餐，主任会请大家吃烤鱼或者火锅，以前从来不吃烤鱼的我现在竟然喜欢上了，2020年是我目前喝酒喝得最多的一年，也是第一次喝断片过，在我们这种体制内工作也在所难免，但还是会有抵触，可能是和大家之间的感情还没到位吧，加上我不是很“熊”（当地话：喜欢的意思）这个玩意儿，而且我们科室聚餐喝酒有个特点就是会喝得比较“久”，差不多每次都要喝到很晚才会散场，有时候还会接着二场，反过来一想，当地生活消费水平这么高，每周能出来打一次牙祭也挺不错的。前几天在马哥的疯狂暗示下给单位写了个小软件（待测试），之前一直想着要韬光养"会"（晦），避其锋芒，低调低调再低调，不要和任何同事产生利益冲突，而且崭露头角在我们这种环境下并不是什么好事，但后面想着也并不是这样，有时候就是要发挥自己的特长，大家也都看在眼里，不要畏手畏脚，而是大胆尝试。越来越想找回当初那个“初生牛犊不怕虎”的自己了！
+  
+　　学习上，有所懈怠，应当反思和检讨，最近一段时间没法沉下心学习，不学习就无法进步，无法改变自己、突破自我。现阶段，成长比成功更重要，脱贫比脱单更重要。
+
+Edit on Jan 2021 by ckj | ChongQing
+
+　　It's up to your inner and keep it peaces!（心态决定一切，我思故我在！）
+
+-----
 
 ![[](https://ckjbug.cnblogs.com/)](https://www.easyicon.net/api/resizeApi.php?id=5323&size=72)
 
