--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -5,9 +5,9 @@
     <img src="https://www.easyicon.net/api/resizeApi.php?id=1125428&size=128" width="72px"> 
 </div>
 
-> Notice：这是一个以作者“心路历程”为主题的Log，我会将自己在每年里遇到的重要事情和感悟记录在这里，等他日功成身退了再拿出来回忆。成长之路，当一步一个脚印。一辈子不断更，共同见证！
+> Notice：这是一个以作者“心路历程”为主题的Log，我会将自己在每年里遇到的重要事情和感悟记录在这里。成长之路，当一步一个脚印。一辈子不断更，共同见证！
 
-## 悟　　　
+## 一
 
 　　前不久看到一篇博客，感觉博主（也是程序猿）说的很有道理，身为一个肩负未来科技发展的IT技术人才，每天都要进步，每天都要学习新的技术，不能懈怠，哪怕是每只看一篇博文、get一点技术那都是在前进，在浏览别人的开源项目时，不需要你一行代码一行代码的去敲一遍，但至少你得大概看懂这些东西，从中能够学习到东西，然后认真思考，提出自己不同的看法，如果这点都没有做到，那你就是在浪费时间，还不如把时间花费到听歌看电影上。
 
@@ -20,7 +20,7 @@ Edit on 10 Dec 2016 by ckj
 
 ---------------------
 
-## 悟
+## 二
 　　生活，不仅仅是“生下来，活下去”这么简单，一来一去，好比旅游，我们只是过客，来到地球旅游了个几十年。下一站是哪里？鬼知道😅。今天抽时间看了一部电影《七十七天》，是以探险作家杨柳松77天孤身穿越羌塘无人区的真实事迹为蓝本创作。电影中，在生活里迷失了自我的男主决定独自一人穿越雪域高原无人区，女主身体残疾仍然乐观面对生活。人活着是为了什么？这部影片告诉我们，不是自由，而是追求自由，做自己想做的事情。
 
 　　前几天看了一篇文章[为什么不能限制程序员的自由](https://www.gnu.org/philosophy/programs-must-not-limit-freedom-to-run.html)，文章将开源软件和自由结合在一起讲了一番无厘头，比较有趣，推荐大家看看。的确，相信大部分人都不喜欢被自己的行动和选择受到限制，两次实习经历都是在国企，给我的感觉就是不自由，不能做自己想做的事情，更不知道自己想做什么。不知不觉，来北京快一年了，当时一起来实习的同学都已经回去了，而我还选择留在这边，一股劲儿的觉得能够在这里打拼出一片天地。
@@ -33,7 +33,7 @@ Edit on 4 Sept 2018 by ckj
 　　人生最绝望的时候，是当你拿出兜里仅存的三块钱买了瓶饮料，开盖不仅没有“再来一瓶”，而连个“谢谢惠顾”都没有！
 
 ---------------
-## 悟
+## 三
 　　又是一个命运的转角点，不知道该作何选择，北京数字冰雹这边的offer已经拿下了，实习薪资7K，上午补上了金蝶软件的线上面试，虽然还不知道后续的结果，但也没有遗憾了。数字冰雹是搞大数据可视化的，算的上这个行业中的佼佼者，通过数据可视化做一些大屏数据的展示，而这个方向我也比较感兴趣，但是他们公司算不上纯互联网公司，用的是自己研发的一套可视化引擎，所以公司有点国企的风气。现在属于考核期，也是一个双向选择的时间段，通过两天的接触发现这里的工作环境并不是很理想，电脑不能上外网，更别讲Google，没有用到最前沿的技术，我负责的主要是做一些WPF控件的定制开发和可视化系统的搭建，没有太大的挑战，说实话感觉挺枯燥的，也不知道能不能长期坚持下来，所以很犹豫是不是要选择这一家公司。
 
 　　每当面临这种尴尬的处境，我都喜欢用抛硬币的方式告诉自己怎么抉择，我也知道有些事情不能儿戏，但是这也是我最能接收的办法，即便以后后悔了也不会埋怨他人和自己，因为我相信是你的终究会来到你的身边，不是你的也不能强求。在写这段日志的时候我就选择了硬币“花”的一面，以前比较喜欢“字”，代表理性和真实，但是今天我选择的是“花”，因为我觉得在职业规划方向，我还是崇尚自由的精神，而上面的“花”则代表我对感兴趣的事物的美好愿景，因为只有这样才能会有更坚定的自驱力来让自己奋斗和成长！ 
@@ -49,7 +49,7 @@ Edit on 8 Nov 2018 by ckj
 　　未来不可期，当下应努力！
 
 ------
-## 悟
+## 四
 　　在微软北京实习的第二周，身边的同学该考研的考研，该工作的工作了，而我选择了一条不一样的道路，继续实习学习，放弃了之前在北京和重庆找的工作，看着大学同学（现室友）在北京做前端工资拿到了15k，也挺羡慕的，但我还是的坚守住，沉下心来充实自己，然后才有资本拿更高的薪资。Center One团队的小伙伴们大都是overseas的研究生，有哈佛、华盛顿、清华大学的小哥哥小姐姐，我的学校和学历也是其中最低的，但是通过这一段时间的相处，我发现他们其实并不是我们想象的那样高不可攀，只是他们的起点比我们高，见识比我们多点儿罢了，没有谁比谁聪明和笨的说法，毕竟每个人都有自己的优点和长处。（对面的小哥哥海外留学花了三百万，这尼玛北京土著的优越感就出来了）
 
 　　现在的学习和生活都在渐渐走上正轨，给自己立了个长期的flag（人若在，🚩不倒），花五年时间打造自己，成为微软的技术专家或MVP，向全栈工程师和架构师的终极目标发展。如果说“选择”比“努力”更重要的话，那我还是要一条路走到黑，但我得抓紧启程了。 .NET技术栈也许不是我最后的选择，但一定是在寻找适合自己技术栈途中的的风向标，期间得注重基础知识和底层的技术。
@@ -59,7 +59,7 @@ Edit on 8 Nov 2018 by ckj
 Edit on June 2019 by ckj | Microsoft China Center One
 
 -----
-## 悟
+## 五
 　　最近思考了很久，我还是决定提前从微软Check Out，离开北京，回去考研，早在很久之前我就有考研深造的想法，只是一直因为实习的事情所耽误，以前总是想着读个大学了就出来早点挣钱，经济独立了就能做自己想做的事情，但最近才深刻地意识到高学历的重要性。客观因素还是觉得现在本科学历太低了，对以后的职业发展会有所牵绊，主观因素还是觉得不能一辈子当码农，一是不太喜欢写代码这个工作，二是相对于程序员这个行业来说我还是更喜欢搞做科研、搞教育这块，所以打算后面有机会再读个博出来当大学教师，三是程序员社会地位很底层，不受人尊重。就拿前几天在一家北京不知名创业公司拿了个一万二的offer，工作环境和发展空间暂不讨论，单就老板为人就给我恶心到了，满口跑火车，还喜欢压榨应届生，刚开始答应的一万五，有餐补什么的，最后我去公司考察了解了一下情况，老板出尔反尔，餐补没有，支支吾吾地说介于我这个情况能去申请一下，每天十块钱（我当时忍住了没喷他，太恶心，十块钱在北京能有什么用）。所以劝解大家找工作一定要去找那种人性化，尊重人权的互联网公司（还要有钱），尽量不要去一些小公司，大部分是饼画得很大，但是没有馅儿。
   
 　　这两天我结合自身情况针对“考研”进行了深入分析和评估，初步确定了目标学校（现在还不能透露，能成功上岸了再谈）和考研计划。家里人也全力支持我考研，所以早考不如晚考。
@@ -70,7 +70,7 @@ Edit on Aug 2019 by ckj | ChongQing
   
 -----
 
-## 悟
+## 六
 　　时隔一年，终于安稳下来了，心也沉静下来了。
 
 　　承接上文，考研未果，或者说根本没有去践行（打脸.jpg），从北京离职回重庆后便投了几家互联网，最终选择了去知网，月薪5k，每天工作相当乏味，公司整体的氛围也不是那么理想，最恶心的是一个算得上互联网企业的公司居然会给人一种国企的感觉，第一天报道我就像一个欠了人事几百万一样，啥事都小心翼翼，她态度还相当恶劣，我也不是在这里抹黑，毕竟这是个例，可能会因人而异，但是公司组织的团建（旅游）还是给我留下了很美好的回忆，两个月试用期一过我就主动提离职了，当时爸妈来看我，我也没有隐瞒情况，他们虽然有些不理解，但是当我面还是支持我所有的决定，于是打算在家调整一段时间(美其名是想创业，实则是在逃避)，恰逢今年新冠疫情爆发，所有的安排都被打乱了，我们这一代经历了非典和新冠，还活着，也是不幸中的万幸。之后在全家人的极力劝说下，准备报班考事业单位，三万多学费全是由我二姐出的，也没要我还，这次怎么说也得破釜沉舟、放手一搏了，不但是为了我自己还是家人都得认真一把，结果也没让家人和朋友失望，自己也算比较幸运，第一次公招就考上了，零零碎碎大概花了两个月时间集中学习，加上自己运用了些报考的小策略，由于这次疫情影响，不同往年，今年是统一7.19考试，既是个机遇，也是个挑战，报名报了三十个左右，缴费交了十五个左右，再从十五个选了三个最合适的岗位作为备选，最后选了个几率最大的地方（二十多个人竞争），也就是我现在上班的地方，一个县城的人民医院（数据库管理岗），我现在对待工作和生活的心态是“既来之，则安之”。考试过后我爸妈和两个姐姐都发了一条朋友圈，特别是我爸很少发朋友圈，从小到大这是第一次让我感觉到“我是他的骄傲”，越来越能感觉到父母正在老去，有时候翻一下十几年前父亲的照片能明显看出岁月留下的痕迹，所以也不能再由着自己的性子了，以前总是觉得家里哥哥姐姐多，我又是最小的一个，把责任都推到他们身上，一人吃饱全家不饿，自己还怀揣着一个北京梦、世界梦，这些东西对于我们这个阶层人来说都是可遇而不可求的，还得看机遇和造化，认真做好自己该做的就行了，其他的交给命运。以前总觉得命运多舛，没有贵人相助，做啥子事都不顺利，怪这个怪那个，现在我才明白，人一生中最大的贵人是父母和兄弟姐妹这些亲人，他们也是我的软肋，我可以不要现在拥有的一切，但我一定要我家人平平安安，健健康康。
@@ -83,7 +83,7 @@ Edit on Aug 2020 by ckj | ChongQing
 
 -----
 
-## 悟
+## 七
 　　转眼间，在新单位上了五个多月的班，一切都挺顺利，父母在这边给我全款买了套房，想着尽可能的给我创造一个好的条件，没有买房的压力，能够好好奋斗自己的事业，但是有了房子，却总缺少点儿"家"的感觉，可能是还没有真正成家立业吧，家里人也在催我找对象，终于体会到家里人催婚的那种感受了，虽然同事和朋友给我介绍了几个女性朋友，但我还是挺反感这种形式的恋爱或者婚姻，所有都回绝了。这段时间养成了存钱的习惯，花钱也不像之前那样大手大脚的了，虽然试用期工资很低，但是每个月多少都会存点儿，用来买基金或理财，以防将来不时之需。最近我性格也发生了不少变化，以前从来不会主动给家里人打电话，但现在每周都会定期给父母和爷爷奶奶打个电话，问候一下。今年的新年愿望便是希望家里人“身体健康，平平安安”！
   
 　　工作上，稳步推进，感觉都还在我的预期之中，科室差不多每周都会聚餐，主任会请大家吃烤鱼或者火锅，以前从来不吃烤鱼的我现在竟然喜欢上了，2020年是我目前喝酒喝得最多的一年，也是第一次喝断片过，在我们这种体制内工作也在所难免，但还是会有抵触，可能是和大家之间的感情还没到位吧，加上我不是很“熊”（当地话：喜欢的意思）这个玩意儿，而且我们科室聚餐喝酒有个特点就是会喝得比较“久”，差不多每次都要喝到很晚才会散场，有时候还会接着二场，反过来一想，当地生活消费水平这么高，每周能出来打一次牙祭也挺不错的。前几天在马哥的疯狂暗示下给单位写了个小软件（待测试），之前一直想着要韬光养"会"（晦），避其锋芒，低调低调再低调，不要和任何同事产生利益冲突，而且崭露头角在我们这种环境下并不是什么好事，但后面想着也并不是这样，有时候就是要发挥自己的特长，大家也都看在眼里，不要畏手畏脚，而是大胆尝试。越来越想找回当初那个“初生牛犊不怕虎”的自己了！
@@ -94,6 +94,17 @@ Edit on Jan 2021 by ckj | ChongQing
 
 　　It's up to your inner and keep it peaces!（心态决定一切，我思故我在！）
 
+-----
+
+## 八
+　　今天是2021年的最后一天，百感交集但又无从下笔，虽然生活和工作都没有什么大起大伏，但还是有些事情值得分享，今年我养了人生中的第一只猫，恰逢国庆喜提“十一”，一只美短，也是初次体验到当铲屎官的不易，但她也给我的生活还是带来了很多欢乐，同时也培养了我的耐心。这一年我长胖了十斤，身体素质明显下降，由于长期的不良作息和饮食习惯，加上没有坚持锻炼，肚子上出现了游泳圈，前几天在和北上广工作的朋友视频时还在谈论这事儿，前不久做职业健康体检的时候做了一个CT项目，发现右肺下侧有个很小的结节，阅片室的医生还以为是肺结核，准备报告传染病例，幸亏我及时制止了，因为还没有确诊，加上身体没有任何症状。要知道一旦上报传染病对以后个人的影响是相当大的，然后就是各种检查，找很多医生看了也没有个确定的结论，因为肺部结节有很多原因引起，也有可能是以前得过结合然后自身抵抗力比较好又自愈后留下的疤，所以也就开了一些消炎药先吃着，后面再去复查一下，看来明年一定得加强锻炼了，毕竟在医院上班也知道身体健康的重要性。这个月参加了一场人事调动的考试，准备调回家乡那边的工作，但是由于明年重庆事业单位要改革，这些考试变得格外的难考，最低分都是80分进面，而我由于准备的不够充分只考了五十几分，后面还需要多准备一下，等待下次的机会。
+  
+　　工作上，学会了一些生存技能（哈哈哈，比如如何上班摸鱼），也就是变成了那个自己最讨厌的样子，除了平时日常值班，维护机房网络的安全外，还协助负责了一些政府采购的相关工作，前天被领导安排去卫健委开了一整天的采购培训会，一个理科生被安排来学这东西着实有些折磨，不过也还能接受，毕竟技多不压身。最近也开始躺平了，尤其是在体制内上班还是不要什么事情都去往自己身上揽，万一搞砸了是要问责的，把自己工作职责内的事情做好了就够了，加上现如今的状况是没有任何晋升的空间，一眼看到头，所以要想有所发展只能另谋他法了。再说一说存款，算了一下试用期所有的到手的钱也不到五万块，穷得相当稳定，转正了几个月了，身上也没有存上多少，主要还是没学会理财，平时花钱又比较大手大脚，明年开始准备存钱。
+
+Edit on Dec 2021 by ckj | ChongQing
+
+　　天不得时，日月无光；地不得时，草木不生；水不得时，风浪不平；人不得时，利运不通。
+  
 -----
 
 ![[](https://ckjbug.cnblogs.com/)](https://www.easyicon.net/api/resizeApi.php?id=5323&size=72)
