--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -2,7 +2,7 @@
 天道酬勤
 ### 心路历程
 <div align="center">
-    <img src="https://www.easyicon.net/api/resizeApi.php?id=1125428&size=128" width="72px"> 
+    <img src="" width="72px"> 
 </div>
 
 > Notice：这是一个以作者“心路历程”为主题的Log，我会将自己在每年里遇到的重要事情和感悟记录在这里。成长之路，当一步一个脚印。一辈子不断更，共同见证！
