--- a/Record-mood/悟.md
+++ b/Record-mood/悟.md
@@ -107,6 +107,19 @@ Edit on Dec 2021 by ckj | ChongQing
   
 -----
 
+
+## 九
+　　看到了初中同学发的朋友圈，公招考试了考上了深圳市级公务员，，终于明白了以前辅导员说的毕业三年后就能看出同学之间的差距，同班同学在我的鼓励下面上了微软上海的研发岗位，
+  
+　　工
+
+Edit on Otc 2022 by ckj | ChongQing
+
+　　天不得时，日月无光；地不得时，草木不生；水不得时，风浪不平；人不得时，利运不通。
+  
+-----
+
+
 ![[](https://ckjbug.cnblogs.com/)](https://www.easyicon.net/api/resizeApi.php?id=5323&size=72)
 
 
